5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1807_2563.log
== TEST (2019-06-06 17:14:20) 
-- CODE:
notas = array(eval(input("Notas: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    notas = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:14:32) 
-- CODE:
notas = array(eval(input("Notas: ")))
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    notas = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:14:57) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:22:30) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
notas = 0
monitor = 0

while(side(notas)>1):
	for x in notas:
		notas = 0
		mon= mom + 1
	if xxxx:
		ddddd
	if xxxxx:
		ddddddd
	print(xxxxx)
	notas = array(eval(input("Notas: ")))
		

print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:09:34) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
n_monitor = 0
while(size(notas)>1):
	for x in notas:
		if(5<=x<7):
			n_monitor= n_monitor + 1
	print(notas)
	notas = array(eval(input("proximas notas: ")))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:09:49) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
n_monitor = 0
while(size(notas)>1):
	for x in notas:
		if(5<=x<7):
			n_monitor= n_monitor + 1
	print(notas)
	notas = array(eval(input("proximas notas: ")))		

-- EXECUTION TIME:
0.788714
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
[6.3 6.4 6.  6.9 5.5 5.2]
[4.5 3.8 7.8 4.8 9.6 9.2 8.7 2.3 2.9]
[5.6 4.7 3.8 7.5 8.2 8.4 7.1 6.9 6.7]
[1.1 3.1 2.7 7.8 6.7 4.6 4.9 7. ]
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
[5.1 5.2 5.4 5.3 5.7 5.8 6.1 5.6 5.5 5.9 6.2]
[2.7 6.8 4.7 5.7 3.5 6.6 7.  5.4]
[8.7 8.6 8.9 8.6 7.5 7.2 6.9 7.4 7.2]
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
[8.5 7.5 6.8 6.9 7.  5.6 5.8 6.3]
[7.3 7.1 7.  6.8 6.  5. ]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:18:16) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
n_monitor = 0
while(size(notas)>1):
	for x in notas:
		if(5<=x<7):
			n_monitor= n_monitor + 1
	print(n_monitor)
	notas = array(eval(input("proximas notas: ")))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:18:22) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
n_monitor = 0
while(size(notas)>1):
	for x in notas:
		if(5<=x<7):
			n_monitor= n_monitor + 1
	print(n_monitor)
	notas = array(eval(input("proximas notas: ")))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 15:23:00) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
n_monitor = 0
while(size(notas)>1):
	n_monitor=0
	for x in notas:
		if(5 <= x < 7):
			n_monitor= n_monitor + 1
	print(n_monitor)
	notas = array(eval(input("proximas notas: ")))		

-- EXECUTION TIME:
1.07084
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 15:23:21) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
n_monitor = 0
while(size(notas)>1):
	n_monitor=0
	for x in notas:
		if(5 <= x < 7):
			n_monitor= n_monitor + 1
	print(n_monitor)
	notas = array(eval(input("proximas notas: ")))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 16:55:57) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
n_monitor = 0
while(size(notas)>1):
	
	for x in notas:
		if(5 <= x < 7):
			n_monitor= n_monitor + 1
	print(n_monitor)
	notas = array(eval(input("proximas notas: ")))		

-- EXECUTION TIME:
1.28055
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
9
10
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
15
16
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 16:56:04) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))
n_monitor = 0
while(size(notas)>1):
	
	for x in notas:
		if(5 <= x < 7):
			n_monitor= n_monitor + 1
	print(n_monitor)
	notas = array(eval(input("proximas notas: ")))		

-- EXECUTION TIME:
1.03443
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
6
9
10
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
15
16
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:56:09) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))

while(size(notas)>1):
	n_monitor = 0
	for x in notas:
		if(5 <= x < 7):
			n_monitor= n_monitor + 1
	print(n_monitor)
	notas = array(eval(input("proximas notas: ")))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 16:56:14) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: ")))

while(size(notas)>1):
	n_monitor = 0
	for x in notas:
		if(5 <= x < 7):
			n_monitor= n_monitor + 1
	print(n_monitor)
	notas = array(eval(input("proximas notas: ")))		

-- EXECUTION TIME:
1.28016
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:59:06) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 20:59:16) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
-- EXECUTION TIME:
1.05842
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 6, in <module>
    for elemento in notas:
NameError: name 'notas' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:59:17) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:59:49) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 20:59:59) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 21:00:19) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas_medias:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 21:00:21) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas_medias:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 21:00:34) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas_medias:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 21:00:35) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas_medias:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 21:00:35) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas_medias:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 21:00:35) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas_medias:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 21:00:35) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas_medias:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 21:00:35) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas_medias:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 21:00:35) 
-- CODE:
from numpy import *
notas_medias= array(eval(input('Digite as médias das notas do alunos:   ')))

while(size(notas_medias)>1):
	nao_monitor=0
	for elemento in notas_medias:
		if ( 5<= elemento < 7):
			nao_monitor = nao_monitor + 1
		print(nao_monitor)
		notas_medias= array(eval(input('Digite as Proximas médias das notas do alunos:   ')))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 21:02:08) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: "))) #vetor contendo as notas médias dos alunos

while(size(notas)>1):          
	n_monitor = 0
	for elemento in notas:
		if(5 <= elemento < 7):
			n_monitor= n_monitor + 1
	print(n_monitor)
	notas = array(eval(input("proximas notas: ")))		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 21:19:39) 
-- CODE:
from numpy import *
notas = array(eval(input("Notas: "))) #vetor contendo as notas médias dos alunos

while(size(notas)>1):          
	n_monitor = 0
	for elemento in notas:
		if(5 <= elemento < 7):
			n_monitor= n_monitor + 1
	print(n_monitor)
	notas = array(eval(input("proximas notas: ")))		


-- EXECUTION TIME:
1.23504
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
